--- a/free-nodes/page-3.htm
+++ b/free-nodes/page-3.htm
@@ -3,7 +3,7 @@
 
 <head>
     	<link rel="canonical" href="https://clashgithub.github.io/free-nodes/page-3.htm" />
-	<title>免费节点分享，机场节点分享 - Clash Github官方机场站 - 第2页</title>
+	<title>免费节点分享，机场节点分享 - Clash Github官方机场站 - 第4页</title>
 	<!-- for-mobile-apps -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -13,7 +13,7 @@
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://clashgithub.github.io/free-nodes/page-3.htm" />
     <meta property="og:site_name" content="Clash Github官方机场站" />
-    <meta property="og:title" content="免费节点分享，机场节点分享 - Clash Github官方机场站 - 第2页" />
+    <meta property="og:title" content="免费节点分享，机场节点分享 - Clash Github官方机场站 - 第4页" />
     <meta property="og:image" content="/assets/website/img/clashgithub/favicon.ico" />
     
     <meta name="applicable-device" content="pc,mobile" />
@@ -23,7 +23,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="免费节点分享，机场节点分享 - Clash Github官方机场站 - 第2页">
+    <meta name="apple-mobile-web-app-title" content="免费节点分享，机场节点分享 - Clash Github官方机场站 - 第4页">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -120,6 +120,62 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2025-04-19">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2025-4-19-free-subscribe-node.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/c38971d27f34eb1a1231acac753c4fee.webp" alt="4月19日→21.5M/S|2025年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2025-4-19-free-subscribe-node.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">4月19日→21.5M/S|2025年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了韩国、美国、加拿大、欧洲、日本、香港、新加坡等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
+                                    <div class="welcome xcblog-blog-item" data-date="2025-04-17">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2025-4-17-free-node-subscribe.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/462333cdd7156cdfce9b23a70ece7cac.webp" alt="4月17日→18.2M/S|2025年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2025-4-17-free-node-subscribe.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">4月17日→18.2M/S|2025年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了新加坡、美国、香港、加拿大、日本、欧洲、韩国等地区,最高速度可达18.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
+                                    <div class="welcome xcblog-blog-item" data-date="2025-04-14">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2025-4-14-node-share.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/572cca27916877c289a949f8bee620b0.webp" alt="4月14日→21.3M/S|2025年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2025-4-14-node-share.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">4月14日→21.3M/S|2025年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了新加坡、美国、日本、加拿大、欧洲、韩国、香港等地区,最高速度可达21.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
+                                    <div class="welcome xcblog-blog-item" data-date="2025-04-13">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2025-4-13-free-clash.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/33b1ff2369380b61bcbd99951db89701.webp" alt="4月13日→21.5M/S|2025年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2025-4-13-free-clash.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">4月13日→21.5M/S|2025年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了加拿大、欧洲、韩国、香港、新加坡、美国、日本等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2025-04-12">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2025-4-12-free-node-subscribe.htm" class="xcblog-blog-url">
@@ -204,50 +260,8 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2025-04-04">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2025-4-4-free-clash.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/5faefa7f3266b2052cc429ac9dbbdaf6.webp" alt="4月4日→20.5M/S|2025年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址，便宜机场推荐" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2025-4-4-free-clash.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">4月4日→20.5M/S|2025年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址，便宜机场推荐</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了新加坡、韩国、美国、日本、香港、加拿大、欧洲等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2025-04-03">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2025-4-3-clash-node-daily-updates.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/33b1ff2369380b61bcbd99951db89701.webp" alt="4月3日→18.5M/S|2025年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址，便宜机场推荐" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2025-4-3-clash-node-daily-updates.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">4月3日→18.5M/S|2025年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址，便宜机场推荐</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了日本、加拿大、美国、韩国、香港、欧洲、新加坡等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2025-04-01">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2025-4-1-free-ssr-subscribe.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/819f1aade82ef2f65ccdf55abb283a16.webp" alt="4月1日→19.6M/S|2025年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址，便宜机场推荐" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2025-4-1-free-ssr-subscribe.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">4月1日→19.6M/S|2025年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址，便宜机场推荐</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了香港、加拿大、美国、韩国、欧洲、新加坡、日本等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
-            <ul class="pagination"><li><a href="/free-nodes/page-2.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="active"><span>3</span></li> <li class="disabled"><span>&raquo;</span></li></ul>            <!-- //welcome -->
+            <ul class="pagination"><li><a href="/free-nodes/page-2.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/free-nodes/page-4.htm">4</a></li> <li><a href="/free-nodes/page-4.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
         <div class="col-md-3">
             <div class="panel panel-default">
@@ -256,16 +270,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-97536.htm" title="Java的引用和内存">Java的引用和内存</a></li>
-                        <li class="py-2"><a href="/news/article-104183.htm" title="动物疫苗的种类有哪些图片及名称及价格表（动物疫苗知识）">动物疫苗的种类有哪些图片及名称及价格表（动物疫苗知识）</a></li>
-                        <li class="py-2"><a href="/news/article-110184.htm" title="动物疫苗生产厂家排名榜单图片高清（动物疫苗上市公司排名）">动物疫苗生产厂家排名榜单图片高清（动物疫苗上市公司排名）</a></li>
-                        <li class="py-2"><a href="/news/article-98968.htm" title="疫苗的分类不包括灭活疫苗减毒活疫苗动物疫苗重组疫苗（疫苗种类不包括）">疫苗的分类不包括灭活疫苗减毒活疫苗动物疫苗重组疫苗（疫苗种类不包括）</a></li>
-                        <li class="py-2"><a href="/news/article-111033.htm" title="Numpy 高效的运算工具">Numpy 高效的运算工具</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-27-free-clash-subscribe.htm" title="4月27日→19.4M/S|2025年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址，便宜机场推荐">4月27日→19.4M/S|2025年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-91591.htm" title="MVVM中的数据的刷新">MVVM中的数据的刷新</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-23-clash-v2ray-ss-ssr.htm" title="4月23日→22.7M/S|2025年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">4月23日→22.7M/S|2025年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-95352.htm" title="沈阳宠物领养中心电话（沈阳宠物猫领养中心）">沈阳宠物领养中心电话（沈阳宠物猫领养中心）</a></li>
-                        <li class="py-2"><a href="/news/article-98293.htm" title="宠物粮市场分析图（宠物粮市场份额）">宠物粮市场分析图（宠物粮市场份额）</a></li>
+                        <li class="py-2"><a href="/news/article-99757.htm" title="HttpServletRequest.getInputStream()多次读取问题">HttpServletRequest.getInputStream()多次读取问题</a></li>
+                        <li class="py-2"><a href="/news/article-105987.htm" title="猫为什么不用打狂犬（家猫为啥不建议打狂犬）">猫为什么不用打狂犬（家猫为啥不建议打狂犬）</a></li>
+                        <li class="py-2"><a href="/news/article-85746.htm" title="延边宠物领养中心（延边宠物网）">延边宠物领养中心（延边宠物网）</a></li>
+                        <li class="py-2"><a href="/news/article-104343.htm" title="Python 查找算法_众里寻他千百度，蓦然回首那人却在灯火阑珊处（线性、二分，分块、插值查找算法)">Python 查找算法_众里寻他千百度，蓦然回首那人却在灯火阑珊处（线性、二分，分块、插值查找算法)</a></li>
+                        <li class="py-2"><a href="/news/article-111037.htm" title="饲料搅拌机500型多少钱一台（饲料搅拌机500型多少钱一台啊）">饲料搅拌机500型多少钱一台（饲料搅拌机500型多少钱一台啊）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-13-free-clash.htm" title="4月13日→21.5M/S|2025年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐">4月13日→21.5M/S|2025年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-89354.htm" title="宠物粮食加工厂加盟条件要求是什么 宠物粮食加工厂加盟条件要求是什么呢">宠物粮食加工厂加盟条件要求是什么 宠物粮食加工厂加盟条件要求是什么呢</a></li>
+                        <li class="py-2"><a href="/news/article-108499.htm" title="Java中无法访问的语句错误">Java中无法访问的语句错误</a></li>
+                        <li class="py-2"><a href="/news/article-99758.htm" title="实现单例模式的八种方法">实现单例模式的八种方法</a></li>
+                        <li class="py-2"><a href="/news/article-87898.htm" title="宠物店从哪进货的（宠物店货源都从哪里来）">宠物店从哪进货的（宠物店货源都从哪里来）</a></li>
                     </ul>
     </div>
 </div>
@@ -277,7 +291,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">16</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">79</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
